# gymbro-platform

./: .env.example  .gitignore  CHANGELOG.md  CHECKPOINT.md  GRAPHQL_IMPLEMENTATION_REPORT.md  HEALTHKIT_ANALYSIS.md  HEALTHKIT_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  Makefile  NEXT_STEPS.md  PLATFORM_DEPLOYMENT.md  PLATFORM_TASKS.md  QUICKSTART.md  README.md  TDD_CASK_COMPLETION_REPORT.md  TDD_TASK_COMPLETION_REPORT.md  TESTING_AND_TEMPLATE_SUMMARY.md  TYPE_SAFETY_AUDIT.md  USER_MANAGEMENT_DISCREPANCIES_ANALYSIS.md  docker-compose.test.yml  docker-compose.yml  graphql_test.json  gymbro-platform.code-workspace  instructions.md  issue_opened.md  render.yaml  run-all-tests.py  supabase-env-template.md
.github/: pull_request_template.md
QA/: E2E_TEST_CHOREOGRAPHY.md  README.md  e2e_test_choreography.py  run_e2e_tests.sh
docs/: API_FEDERATION_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  Documentazione Generale.md  README.md  ai-coach-db.md  architettura.md  calorie-balance-db.md  changelog-templates.md  chat-history-setup-user-management.md  database-architecture.md  database-permissions.md  flutter.md  health-monitor-db.md  meal-tracking-db.md  microservice-template.md  microservizi_python.md  notifications-db.md  poetry-migration-complete.md  poetry-migration.md  redis-alternatives-mvp.md  release-process.md  (+4 more)
services/analytics-service/: Dockerfile  README.md  pyproject.toml
services/analytics-service/app/: __init__.py  config.py  enhanced_analytics.py  graphql_schema.py  http_client.py  main.py  models.py  services.py
services/analytics-service/app/api/: __init__.py
services/analytics-service/app/api/v1/: __init__.py  endpoints.py
services/analytics-service/tests/: __init__.py
services/calorie-balance/: .dockerignore  .env.example  .env.template  .flake8  API-roadmap.md  BATCH_PROGRESS.md  CHANGELOG.md  COMPLETE_TEMPLATE.md  DEPLOYMENT.md  Dockerfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  TASKS.md  create_tables_direct.py  docker-compose.yml  final_analysis.py  problem.md  pyproject.toml  quick_verify.py  repositories_ending.py  setup_database.py  start-dev.sh  start_and_test.sh  stop-dev.sh  test_comprehensive.py  test_fix_verification.py  test_graphql.py  test_graphql_comprehensive.py  test_graphql_federation.py  verify_deployment.py
services/calorie-balance/app/: main.py
services/calorie-balance/app/api/: __init__.py  calorie_schemas.py  dependencies.py  schemas.py  timeline_schemas.py
services/calorie-balance/app/api/routers/: __init__.py  balance.py  balance_old.py  calorie_event.py  events.py  goals.py  goals_old.py  health.py  metabolic.py  timeline.py  users.py
services/calorie-balance/app/api/v1/: entities.py  router.py
services/calorie-balance/app/api/v1/endpoints/: health.py  items.py
services/calorie-balance/app/application/: __init__.py  commands.py  commands_backup.py  queries.py  services.py
services/calorie-balance/app/core/: config.py  database.py  dependencies.py  exceptions.py  interfaces.py  logging.py  schema_tables.py  schemas.py  security.py
services/calorie-balance/app/domain/: __init__.py  entities.py  interfaces.py  repositories.py  services.py
services/calorie-balance/app/domain/repositories/: __init__.py
services/calorie-balance/app/graphql/: __init__.py  extended_resolvers.py  extended_types.py  interceptors.py  mutations.py  queries.py  queries.py.corrupted  queries_methods.tmp  schema.graphql  schema.py  types.py
services/calorie-balance/app/infrastructure/: __init__.py  services.py
services/calorie-balance/app/infrastructure/database/: __init__.py  models.py  repositories.py  uow.py
services/calorie-balance/app/infrastructure/repositories/: repositories.py
services/calorie-balance/scripts/: export_schema.py
services/calorie-balance/sql/: 000_reset_schema.sql  001_grants.sql  001_initial_schema.sql  002_temporal_views.sql  003_grants.sql  004_alter_tables.sql  005_cross_schema_migration.sql  006_fix_schema_task_1_1.sql  007_fix_event_source_enum.sql  008_missing_rpc_functions.sql  009_test_data_preparation.sql  check_current_permissions.sql  debug_schema.sql
services/calorie-balance/tests/: __init__.py  conftest.py  test_config.py  test_health.py
services/user-management/: .dockerignore  .env.example  .env.template  .env.test  .flake8  API-roadmap.md  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  auth.py  cache_service.py  check_user.py  comprehensive_test_suite.py  config.py  create_test_user.py  database.py  debug_test.py  docker-compose.yml  endpoint_discovery.py  graphql_federation_test_framework.py  graphql_schema.py  healthkit_mapper.py  main.py  models.py  mypy.ini  pyproject.toml  pytest.ini  quick_test.py  render.yaml  requirements.txt  run_all_tests.sh  run_comprehensive_test.py  run_tests.sh  services.py  setup_database_002.sh  start-dev.sh  stop-dev.sh  (+9 more)
services/user-management/app/: main.py
services/user-management/app/api/: dependencies.py  schemas.py
services/user-management/app/api/v1/: auth.py  router.py  users.py
services/user-management/app/api/v1/endpoints/: health.py  items.py
services/user-management/app/application/: auth_services.py
services/user-management/app/core/: config.py  database.py  exceptions.py  logging.py  schema_tables.py  security.py
services/user-management/app/domain/: __init__.py  entities.py  repositories.py
services/user-management/app/graphql/: __init__.py  mutations.py  queries.py  schema.py  types.py
services/user-management/app/infrastructure/: auth_repositories.py
services/user-management/app/infrastructure/repositories/: __init__.py  user_repository.py
services/user-management/migrations/: healthkit_enhancement_migration.sql
services/user-management/sql/: 000_reset_schema.sql  001_initial_schema.sql  002_auth_tables_fix.sql  003_grants.sql  004_grants.sql  check_current_permissions.sql
services/user-management/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_auth.py  test_config.py  test_health.py  test_models.py
(+151 files in other folders)
